<resources>
    <string name="app_name">Access-autism</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Phone Number or Email</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_up_link">Sign Up Now</string>
    <string name="no_account_text">You don\'t have an account?</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="child_registration_sign_up_title">Child registration</string>
    <string name="child_registration_first_name">First Name</string>
    <string name="child_registration_surname">Surname</string>
    <string name="child_registration_address">Address</string>
    <string name="child_registration_birth_date">Birth date (mm/dd/yyyy)</string>
    <string name="child_registration_national_id">National ID (Optional)</string>
    <string name="child_registration_diagnostic_status">Diagnostic status</string>
    <string name="child_registration_needs_title">Needs</string>
    <string name="child_registration_asd_features_title">ASD Features</string>
    <string name="child_registration_assigned_provider_title">Assigned provider</string>
    <string name="child_registration_description_title">Additional description of the child (Optional)</string>
    <string name="provider_sign_up_assigned_facility_title">Assigned facility</string>
    <string name="provider_sign_up_speciality_title">Role / Speciality</string>
    <string name="missing_role_error_message">Select a valid role</string>
    <string name="family_registration_permissions">Permissions setting</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="skills_info_placeholder">more details</string>
    <string name="description_label">Description</string>
    <string name="name_placeholder">Name</string>
    <string name="other_placeholder">Other</string>
    <string name="yes_placeholder">Yes</string>
    <string name="no_placeholder">No</string>
    <string name="asd_features_warning">You will now have a set of questions to describe your child\'s ASD features.\nBe sure to have some time available to answer these questions !</string>
    <string name="asd_features_developmental_questions">My child doesn\'t do this</string>
    <string name="asd_features_developmental_question1">Smile</string>
    <string name="asd_features_developmental_question2">Pointing at objects</string>
    <string name="asd_features_developmental_question3">Sit alone</string>
    <string name="asd_features_questionYN1">Does your child sleep through the night?</string>
    <string name="asd_features_questionYN2">Does your child talk?</string>
    <string name="asd_features_questionYN3">Do they ask questions?</string>
    <string name="asd_features_questionYN4">Do they speak in sentences?</string>
    <string name="asd_features_communication1">How does your child communicate with you non-verbally?</string>
    <string name="asd_features_communication2">What types of communication does your child respond to?</string>
    <string name="asd_features_communication3">Why does your child communicate with other people?</string>
    <string name="asd_features_play1">Does your child play?</string>
    <string name="asd_features_play2">How do they play?</string>
    <string name="asd_features_emotional_question">Does your child experience any of the following:</string>
    <string name="asd_features_skills_question">If you could select three things to make your life easier with your child, what would they be?</string>
    <string name="start_dashboard">START!</string>

    <string-array name="skills_titles">
        <item>Self Help</item>
        <item>Healthy Lifestyle</item>
        <item>Playing</item>
        <item>Listening</item>
        <item>Problem Solving</item>
        <item>Focus</item>
        <item>Understanding</item>
        <item>Speech</item>
        <item>Drawing</item>
    </string-array>

    <string-array name="skills_info">
        <item>More details about Self Help!</item>
        <item>More details about Healthy Lifestyle!</item>
        <item>More details about Playing!</item>
        <item>More details about Listening!</item>
        <item>More details about Problem Solving!</item>
        <item>More details about Focus!</item>
        <item>More details about Understanding!</item>
        <item>More details about Speech!</item>
        <item>More details about Drawing!</item>
    </string-array>

    <array name="skills_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
    </array>


    <!-- ASD Features Questions -->
    <string name="asd_features1_question1">Does your child currently attend a school or treatment program ?</string>
    <string name="asdf_q1_i1">School</string>
    <string name="asdf_q1_i2">Daycare</string>

    <string name="asd_features1_question2">Does your child currently receive any special services ?</string>
    <string-array name="special_services">
        <item>ABA</item>
        <item>OT</item>
        <item>PT</item>
        <item>Private support</item>
    </string-array>

    <string name="asd_features1_question3">Do you have any concerns regarding the development of your child ?</string>
    <string-array name="concerns_list">
        <item>Educational</item>
        <item>Behavioral</item>
    </string-array>
    <string-array name="educational_concerns">
        <item>Reading</item>
        <item>Writing</item>
        <item>Spelling</item>
        <item>Attention</item>
        <item>Memory</item>
        <item>Organization</item>
    </string-array>
    <string-array name="behavioral_concerns">
        <item>Sleeping</item>
        <item>Eating</item>
        <item>Playing</item>
        <item>Toilet-training</item>
    </string-array>

    <string name="asd_features1_question4">Has your child been diagnosed with any of the following:</string>

    <string-array name="scales_responses">
        <item>A Lot</item>
        <item>Sometimes</item>
        <item>Rarely</item>
        <item>Never</item>
    </string-array>


    <string-array name="play_multiple_choices">
        <item>Choice 1</item>
        <item>Choice 2</item>
        <item>Choice 3</item>
        <item>Choice 4</item>
        <item>Choice 5</item>
        <item>Choice 6</item>
    </string-array>


</resources>
