<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chouaib.access_autism.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="325dp"
        android:layout_height="0dp"
        android:layout_marginBottom="74dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/colorCardGray"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/editText6"
            app:layout_constraintTop_toTopOf="@+id/editText6">

            <EditText
                android:id="@+id/editText5"
                style="@style/Base.Widget.AppCompat.EditText"
                android:layout_width="252dp"
                android:layout_height="49dp"
                android:layout_marginBottom="157dp"
                android:layout_marginTop="94dp"
                android:ems="10"
                android:hint="@string/login_hint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.96" />

            <EditText
                android:id="@+id/editText6"
                style="@style/Base.Widget.AppCompat.EditText"
                android:layout_width="252dp"
                android:layout_height="49dp"
                android:layout_marginBottom="125dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintVertical_bias="0.847" />

            <Button
                android:id="@+id/button"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/colorButtonOrange"
                android:onClick="onClickLogin"
                android:text="@string/login_button"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/no_account_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:onClick="onClickSignUp"
        android:text="@string/sign_up_link"
        android:textColor="@color/colorButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</android.support.constraint.ConstraintLayout>
